--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "version": "0.1.0",
     "description": "Front end project of Spring-Stomp-WebSocket-Demo",
     "author": "yeyu456 <yeyu456@gmail.com>",
-    "main": "./tools/webpack.config.js",
     "scripts": {
-        "watch": "webpack --watch --config ./tools/webpack.config.js"
+        "start": "gulp",
+        "watch": "gulp watch",
+        "development": "gulp",
+        "production": "gulp production"
     },
     "license": "MIT",
     "devDependencies": {
@@ -13,10 +15,21 @@
         "babel-loader": "^6.2.4",
         "babel-polyfill": "^6.7.4",
         "babel-preset-es2015": "^6.6.0",
-        "webpack": "^2.1.0-beta.4",
+
         "webstomp-client": "^1.0.2",
         "sockjs-client": "^1.0.3",
+
         "jscs": "^3.0.0",
-        "jshint":"^2.9.1"
+        "jshint":"^2.9.1",
+        "jshint-stylish":"^2.1.0",
+
+        "del": "^2.2.0",
+        "gulp": "^3.9.1",
+        "gulp-babel":"^6.1.2",
+        "gulp-uglify": "^1.5.3",
+        "gulp-sourcemaps": "^1.6.0",
+        "gulp-util": "^3.0.7",
+        "gulp-jshint": "^2.0.0",
+        "gulp-jscs": "^3.0.2"
     }
 }
