--- a/package.json
+++ b/package.json
@@ -19,17 +19,12 @@
         "webstomp-client": "^1.0.2",
         "sockjs-client": "^1.0.3",
 
-        "jscs": "^3.0.0",
-        "jshint":"^2.9.1",
-        "jshint-stylish":"^2.1.0",
-
         "del": "^2.2.0",
         "gulp": "^3.9.1",
         "gulp-babel":"^6.1.2",
         "gulp-uglify": "^1.5.3",
         "gulp-sourcemaps": "^1.6.0",
         "gulp-util": "^3.0.7",
-        "gulp-jshint": "^2.0.0",
-        "gulp-jscs": "^3.0.2"
+        "gulp-eslint": "^2.0.0"
     }
 }
