--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 
         "del": "^2.2.0",
         "gulp": "^3.9.1",
-        "gulp-babel":"^6.1.2",
+        "gulp-babel": "^6.1.2",
+        "gulp-concat": "^2.6.0",
         "gulp-uglify": "^1.5.3",
         "gulp-sourcemaps": "^1.6.0",
         "gulp-util": "^3.0.7",
