--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "babel-loader": "^6.2.4",
         "babel-polyfill": "^6.7.4",
         "babel-preset-es2015": "^6.6.0",
-
+        "babel-eslint": "^6.0.4",
         "webstomp-client": "^1.0.2",
         "sockjs-client": "^1.0.3",
 
